--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
 body {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  padding: 2% 3%;
+  /* padding: 2% 3% 0; */
+  margin: 0;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 2% 3%;
 }
 
 .logo {
@@ -65,7 +67,8 @@ h1 {
 }
 
 .hero-image {
-  width: 100%;
+  width: 94%;
+  margin: 0 3%;
   border-radius: 18px;
 }
 
@@ -94,6 +97,7 @@ h1 {
   color: #828282;
   font-size: 14px;
   font-weight: 500;
+  margin-bottom: 3%;
 }
 
 .contact input {
@@ -117,7 +121,7 @@ input::placeholder {
   border-radius: 12px;
   font-size: 18px;
   position: absolute;
-  margin-left: 13.6%;
+  margin-left: 15%;
   padding: 0.55% 1.5%;
   cursor: pointer;
 }
@@ -128,7 +132,10 @@ h2 {
   line-height: 54px;
 }
 
-.services, .our-work, .our-team {
+.services,
+.our-work,
+.our-team,
+.client-section {
   margin: 0 11% 15%;
 }
 
@@ -149,13 +156,12 @@ h2 {
 }
 
 .service-card:hover {
-    box-shadow: 0px 10px 30px rgba(51, 51, 51, 0.1);
+  box-shadow: 0px 10px 30px rgba(51, 51, 51, 0.1);
 }
 
 .service-card:hover button {
-    color: white;
-    background-color: #2D9CDB;
-
+  color: white;
+  background-color: #2d9cdb;
 }
 
 .service-icon {
@@ -193,93 +199,181 @@ i {
 }
 
 .service-card p {
-    color: #4f4f4f;
-    font-size:  16px;
-    line-height: 24px;
-    width: 95%;
+  color: #4f4f4f;
+  font-size: 16px;
+  line-height: 24px;
+  width: 95%;
 }
 
 .service-card button {
-    border: none;
-    border-radius: 12px;
-    background-color: #e0e0e0;
-    padding: 5%;
-    color: #828282;
-    font-size: 16px;
-    font-weight: 500;
-    cursor: pointer;
+  border: none;
+  border-radius: 12px;
+  background-color: #e0e0e0;
+  padding: 5%;
+  color: #828282;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
 }
 
-.our-work h2{
-    width: 30%;
+.our-work h2 {
+  width: 30%;
 }
 
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .project:nth-child(odd) {
-    margin-top: 12%;
+  margin-top: 12%;
 }
 
 .project {
-    width: 48%;
+  width: 48%;
 }
 
 .project img {
-    border-radius: 12px;
+  border-radius: 12px;
 }
 
 .project-type {
-   color: #828282;
-   font-size: 14px;
-   font-weight: 300; 
+  color: #828282;
+  font-size: 14px;
+  font-weight: 300;
 }
 
 .project-name {
-    color: #333333;
-    font-size: 24px;
-    font-weight: 500;
+  color: #333333;
+  font-size: 24px;
+  font-weight: 500;
 }
 
 .our-work a {
-    color: #2d9cdb;
-    font-size: 24px;
-    font-weight: 500;
-    margin-left: 85%;
+  color: #2d9cdb;
+  font-size: 24px;
+  font-weight: 500;
+  margin-left: 85%;
 }
 
 .our-team {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .meet-the-team {
-    width: 20%;
+  width: 20%;
 }
 
 .meet-the-team span {
-    color: #eb5757;
-    font-size: 18px;
-    font-weight: 500;
+  color: #eb5757;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .team-images {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .team-images img {
-    height: fit-content;
-    width: fit-content;
-    margin: 2%;
-    border-radius: 24px;
+  height: fit-content;
+  width: fit-content;
+  margin: 2%;
+  border-radius: 24px;
 }
 
 .team-images div {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.client-section {
+  margin-bottom: 10%;
+}
+
+.client-section h2 {
+  width: 65%;
+}
+
+.client {
+  display: flex;
+  align-items: center;
+}
+
+.client img {
+  width: 82px;
+  height: 82px;
+  border-radius: 12px;
+}
+
+.client-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-left: 2%;
+}
+
+.client h3 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 36px;
+  color: #333333;
+  margin: 0;
+}
+
+.client p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+  color: #828282;
+  margin: 0;
+}
+
+footer {
+  background-color: #100e1d;
+  color: #f2f2f2;
+  padding: 4% 10% 10%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-nav a {
+  color: white;
+  font-size: 18px;
+  line-height: 36px;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  width: 6%;
+}
+
+.social-media .links {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .contact label {
+  color: #f2f2f2;
+}
+
+.footer-input {
+  margin-top: 3%;
+}
+
+footer .contact input {
+  padding: 5.5% 5% 5.5% 5.5%;
+}
+
+footer .contact button {
+  margin-left: 8%;
 }
